<resources>
    <string name="app_name">BarcodeTester</string>
    <string name="title_activity_main">BarcodeTester</string>
    <string name="title_activity_ticket_detail">Ticket Detail</string>

    <string name="label_ticket_unknown">Unknown</string>
    <string name="header_ticket_detail">Ticket details</string>
    <string name="label_ticket_contents">Contents</string>
    <string name="label_barcode_details">Barcode</string>
    <string name="label_carrier">Carrier</string>
    <string name="label_creation">Created at</string>
    <string name="label_key_code">Key Identifier</string>
    <string name="label_share">Share</string>
    <string name="label_explanation_unknown">Unknown ticket</string>
    <string name="label_order_number">Order number</string>
    <string name="label_ticket_details">Ticket</string>
    <string name="label_languages">Languages</string>
    <string name="label_empty"><![CDATA[<empty>]]></string>
    <string name="label_ticket_flags">Ticket flags</string>
    <string name="flag_international">International</string>
    <string name="flag_edited">Edited</string>
    <string name="flag_specimen">Specimen</string>
    <string name="label_signature_valid">Signature check</string>
    <string name="label_not_implemented">Unknown (not yet implemented)</string>
    <string name="label_pause">Paused</string>
    <string name="action_tickets">Remove tickets</string>
    <string name="label_no_tickets">No ticket scanned</string>
    <string name="label_no_tickets_explanation">Hold an Aztec barcode in front of the camera and position it in the highlighted box</string>
    <string name="title_whats_new">What\'s new</string>
    <string name="label_ok">OK</string>
    <string name="action_about">About</string>
    <string name="email_content"><![CDATA[<explain this ticket and give details about its occurrence>\r\n======================(BarcodeTester 1.0.0)\r\n\r\n]]></string>
    <string name="email_barcode" translatable="false">nsc.mlab@ns.nl</string>
    <string name="email_subject">Aztec barcode from BarcodeTester 1.0.0</string>
    <string name="label_send_email">Send email</string>
    <string name="label_email">Send Email</string>
    <string name="email_normal_subject">BarcodeTester Barcode</string>
    <string name="label_travel_details">Travel</string>
    <string name="label_ticket_name">Ticket title</string>
    <string name="label_passenger_name">Traveller</string>
    <string name="label_outward_trip">Outward trip</string>
    <string name="label_return_trip">Return trip</string>
    <string name="label_field_unknown">Not applicable</string>
    <string name="label_price">Price</string>
    <string name="label_travel_class">Class</string>
    <string name="tab_properties">Properties</string>
    <string name="tab_barcode">Barcode</string>
    <string name="tab_contents">Contents</string>
    <string name="label_swipe">Swipe left and right to see full contents</string>
    <string name="title_camera">Camera permission</string>
    <string name="text_camera">This app uses the camera to take snapshots and detect barcodes. The next screen will ask you to give permission to allow this app to use the camera.</string>
    <string name="label_barcode_uic">UIC 918.2 Aztec barcode</string>
    <string name="title_activity_fields_table">Fields</string>
    <string name="label_line">Line</string>
    <string name="label_column">Column</string>
    <string name="label_width">Width</string>
    <string name="label_blank"><![CDATA[<blank>]]></string>
    <string name="label_view_fields">Fields</string>
    <string name="label_tickets_found">Ticket found</string>
    <string name="title_barcode_error">Error parsing barcode</string>
    <string name="text_barcode_error">The barcode was found, but an error occurred during parsing. This could be a variety of issues. Use the share button to send the contents.</string>
    <string name="text_barcode_error_not_uic">The barcode was found, but this does not seem to be a UIC 918.3 barcode (or one this app supports). Use the share button to send the contents and determine the type.</string>

    <string name="tab_tickets">Tickets</string>
    <string name="tab_scanner">Scan</string>
    <string name="sql_db_wipe" translatable="false">DROP TABLE IF EXISTS tickets; DROP TABLE IF EXISTS keys;</string>
    <string name="sql_db_create" translatable="false">CREATE TABLE tickets (
            id INTEGER PRIMARY KEY AUTOINCREMENT,
            raw BLOB UNIQUE,
            json TEXT,
            created TEXT DEFAULT CURRENT_TIMESTAMP,
            updated TEXT DEFAULT CURRENT_TIMESTAMP
        );
        CREATE TABLE keys (
            id INTEGER PRIMARY KEY AUTOINCREMENT,
            carrier INTEGER,
            key_id TEXT,
            key TEXT,
            created INTEGER
        );
        CREATE UNIQUE INDEX keys_percarrier ON keys(carrier, key_id);
    </string>
    <string name="sql_update_ticket_updated_now" translatable="false">UPDATE tickets SET updated = datetime(\'now\', \'localtime\') WHERE raw = ?</string>
    <string name="text_error_recreating_ticket">Error recreating ticket from fields</string>
    <string name="text_error_creating_barcode">Error creating barcode from text (possibly data is too big)</string>
    <string name="title_activity_manage_keys">Manage Keys</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="pref_scanner_titles">
        <item>ManateeWorks (better, commercial)</item>
        <item>ZXing (open-source)</item>
    </string-array>
    <string-array name="pref_scanner_values" translatable="false">
        <item>MANATEE</item>
        <item>ZXING</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="pref_keys">Keys</string>
    <string name="pref_summ_keys">Manage public keys for verifying ticket authenticity</string>
    <string name="pref_title_scanner">Barcode scanner</string>
    <string name="pref_header_about">About the app</string>
    <string name="prefs_license">License</string>
    <string name="prefs_license_content">MIT License, 2015–2016, Open918.org\nPortions Copyright 2016 Nederlandse Spoorwegen</string>
    <string name="pref_header_data">Data</string>
    <string name="pref_header_scanning">Scanning</string>
    <string name="title_activity_add_key">Add Key</string>
    <string name="label_hint_uic_code">UIC Carrier code (e.g. 1084, 8999)</string>
    <string name="label_hint_key_code">Key Identifier (e.g. TT001, 00003)</string>
    <string name="label_hint_certificate">Certificate</string>
    <string name="add">Add</string>
    <string name="error_snack_not_valid">Form is not valid, please correct errors and try again</string>
    <string name="error_snack_key_exists">This key already exists, try again with a different carrier or keyIdentifier.</string>
    <string name="pref_download_keys">Download UIC Public Keys</string>
    <string name="pref_summ_download_keys">Preload data from the UIC Public Key website</string>
    <string name="error_snack_download_failed">Download of keys failed. Please try again later</string>
    <string name="message_keys_added">Added %d keys</string>
    <string name="title_activity_download_keys">Download Public Keys</string>
    <string name="label_downloading">Downloading keys…</string>
    <string name="label_yes">Yes</string>
    <string name="label_snack_delete_key">Are you sure you want to delete this key?</string>
    <string name="action_download_keys">Download Keys</string>
    <string name="label_key_available">Key in database</string>
    <string name="label_key_unavailable">Key not in database</string>
    <string name="label_signature_invalid">Signature not valid</string>
    <string name="label_signature_is_valid">Signature valid</string>
    <string name="label_signature_ticket_match">Ticket and signature match</string>
    <string name="label_signature_ticket_mismatch">Ticket and signature do not match</string>
    <string name="label_validity">Validity</string>
    <string name="label_carrier_dialog" formatted="false"><![CDATA[<b>RICS code:</b> %d<br /><b>Full name</b>: %s<br /><b>Country:</b> %s<br /><b>Website:</b> <a href=\"%s\">%s</a>]]></string>
    <string name="error_unknown">Unknown</string>
    <string name="label_barcode_version">Version</string>
    <string name="label_barcode_key_id">Key Id</string>
    <string name="type_reserved">Reserved Ticket (IRT, RES, BOA)</string>
    <string name="type_non_reserved">Non-reserved (NRT)</string>
    <string name="type_group">Group (GRT)</string>
    <string name="type_region">Region (RPT)</string>
    <string name="type_other">Other/Bilateral</string>
    <string name="type_unknown">Unknown</string>
    <string name="label_ticket_type">Type ticket</string>
    <string name="label_ticket918_2"><![CDATA[<918.2 barcode>]]></string>
    <string name="action_delete">Delete scanned tickets</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="text_confirm_delete">Are you sure you want to erase all the scanned tickets?</string>
    <string name="label_no">No</string>
    <string name="content_flag">Flag</string>
    <string name="label_ticket_adults">Number of adults</string>
    <string name="label_ticket_children">Number of children</string>
    <string name="label_specimen">Specimen?</string>
    <string name="label_ticket_number">Ticket number</string>
    <string name="label_issued_date">Issued date</string>
    <string name="format_date">Day %1$d Year %2$d</string>
    <string name="label_return">Return trip?</string>
    <string name="format_validity">day %1$d - %2$d</string>
    <string name="label_station_from">Departure station</string>
    <string name="label_station_to">Arrival station</string>
    <string name="label_info_messages">Extra information</string>
    <string name="error_no_fields">There are no fields defined for this ticket.</string>
    <string name="error_no_tickets">There are no scanned tickets. Use the scanner to scan a ticket and see the result here.</string>
    <string name="label_height">Height</string>
    <string name="error_unknown_carrier">Onbekende vervoerder</string>
    <string name="error_unknown_carrier_short">(not a UIC carrier)</string>

</resources>
