<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/sliding_tabs"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <!-- Visible if unknown barcode -->
    <android:android.support.v7.widget.CardView
        android:id="@+id/card_unknown"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="8dp"
        android:paddingBottom="16dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardPreventCornerOverlap="true"
        card_view:contentPadding="4dp"
        card_view:cardCornerRadius="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title.Inverse"
                android:text="@string/label_ticket_unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"/>
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/label_explanation_unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                style="@style/Base.Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_share"
                android:layout_gravity="right"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_share"
                android:drawableLeft="@drawable/ic_share"
                android:drawablePadding="8dp"
                android:text="@string/label_share" />

        </LinearLayout>

    </android:android.support.v7.widget.CardView>

</LinearLayout>